--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -467,6 +467,27 @@
     }
 }
 
+.btn-whatsapp {
+    text-decoration: none;
+    background-color: green;
+    color: white;
+    border: 2px solid transparent;
+    padding: 0.75rem 2.75rem;
+    border-radius: 10px;
+    cursor: pointer;
+    & p {
+        display: flex !important;
+        align-items: center !important;
+        gap: 10px !important;
+    }
+    &:hover {
+        background-color: transparent;
+        color: green;
+        border: 2px solid green;
+    }
+}
+
+
 // ----- video hero -----
 .hero-video {
     .hero-wrapper {
